--- a/Density Calculator/src/main/res/values/colors.xml
+++ b/Density Calculator/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#303F88</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorLight">#303F9F</color>
     <color name="fragmentTitle">#F34ABB</color>
     <color name="tableHeader">#303F61</color>
     <color name="tableColor2">#303A61</color>
